<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ComputerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/top_add_agregar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_add_computer_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/add_computer_message"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_id_add_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="ID:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_brand_add_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Marca"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_model_add_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_model"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Modelo:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_state_add_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_ram_specification_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_ram"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Cantidad:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_mother_specification_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_mother"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Modelo:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_processor_specification_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_processor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Modelo:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/input_graphic_card_specification_computer"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_black">

            <EditText
                android:id="@+id/computer_input_graphic_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="@drawable/input_background"
                android:hint="Modelo:"
                android:inputType="text"
                android:paddingStart="10dp">

            </EditText>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_computer_specification_continuar"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bt_search_background"
            android:text="@string/bt_agregar_specification_computer"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            >

        </LinearLayout>

    </LinearLayout>



</ScrollView>